# Applied_Cryptography_Workshop_Rust

./: .gitignore  temp.rs  temp2.rs
client/: Cargo.toml
client/curls/: airdrop.curl  initializeSubscription.curl
client/src/: main.rs
solana_explorer/: package-lock.json
solana_smart_contract/: Anchor.toml
solana_smart_contract/programs/solana_smart_contract/: Cargo.toml
solana_smart_contract/programs/solana_smart_contract/src/: lib.rs
solana_smart_contract/tests/: solana_smart_contract.ts
