[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.30.1", features = ["async"] }
anchor-lang = "0.30.1"
solana-sdk = "1.17.0"
anyhow = "1.0.93"
tokio = { version = "1.0", features = ["full"] }
bls12_381 = "0.8.0"
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"

# Add this line to link the solana smart contract
solana_smart_contract = { path = "../solana_smart_contract/programs/solana_smart_contract"}
serde_json = "1.0.138"
